fix the gap

--- a/gallery.css
+++ b/gallery.css
@@ -1,6 +1,6 @@
 .gallery {
   display: grid;
-  grid-gap: 0.5rem;
+  grid-gap: 0.2rem;
 
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   grid-template-rows: auto;
